# qa-guru_5_23

./: .gitignore  README.md  config.personal.env.example  config.py  contest.py  pyproject.toml  requirements.txt
lesson_5_23/helpers/: file.py
lesson_5_23/helpers/allure/: attach.py
tests/android/: conftest.py  test_wikipedia.py
